[package]
name = "axia-cli"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
description = "AXIA Relay-chain Client Node"
edition = "2018"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on Linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.13"
thiserror = "1.0.30"
structopt = { version = "0.3.23", optional = true }
futures = "0.3.17"

service = { package = "axia-service", path = "../node/service", default-features = false, optional = true }
axia-node-core-pvf = { path = "../node/core/pvf", optional = true }

sp-core = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
frame-benchmarking-cli = { git = "https://github.com/axia-tech/axia-core", optional = true , branch = "dev" }
try-runtime-cli = { git = "https://github.com/axia-tech/axia-core", optional = true , branch = "dev" }
sc-cli = { git = "https://github.com/axia-tech/axia-core", optional = true , branch = "dev" }
sc-service = { git = "https://github.com/axia-tech/axia-core", optional = true , branch = "dev" }

# this crate is used only to enable `trie-memory-tracker` feature
# see https://github.com/axia-tech/axia-core/pull/6745
sp-trie = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }

[build-dependencies]
axlib-build-script-utils = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

[features]
default = [ "wasmtime", "db", "cli", "full-node", "trie-memory-tracker", "axia-native" ]
wasmtime = [ "sc-cli/wasmtime" ]
db = [ "service/db" ]
cli = [
	"structopt",
	"sc-cli",
	"sc-service",
	"frame-benchmarking-cli",
	"try-runtime-cli",
	"axia-node-core-pvf",
]
runtime-benchmarks = [ "service/runtime-benchmarks" ]
trie-memory-tracker = [ "sp-trie/memory-tracker" ]
full-node = [ "service/full-node" ]
try-runtime = [ "service/try-runtime" ]

# Configure the native runtimes to use. AXIA is enabled by default.
#
# Validators require the native runtime currently
axia-native = [ "service/axia-native" ]
axiatest-native = [ "service/axiatest-native" ]
alphanet-native = [ "service/alphanet-native" ]
betanet-native = [ "service/betanet-native" ]

malus = [ "full-node", "service/malus" ]
disputes = [ "service/disputes" ]
