[package]
name = "axia-core-primitives"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"

[dependencies]
sp-core = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-std = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
axc-scale-codec = { version = "2.3.1", default-features = false, features = [ "derive" ] }
axc-util-mem = { version = "0.10.0", default-features = false, optional = true }

[features]
default = [ "std" ]
std = [
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"scale-info/std",
	"axc-scale-codec/std",
	"axc-util-mem",
]
