[package]
name = 'axia'
authors = ['Axia Network <https://github.com/AxiaCoin/Axia-Network-axia/tree/master>']
build = 'build.rs'
description = 'AXIA node'
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://axia.global'
repository = 'https://github.com/AxiaCoin/Axia-Network-axia/tree/master'
version = '0.9.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'axia'

[dependencies]
primitives = { package = 'axia-primitives', path = '../primitives', version = '0.9.0'}
axia-runtime = {path = '../runtime', version = '0.9.0' }
axia-rpc = {default-features = false, version = '0.9.0', package = 'axia-rpc', path = '../rpc' }
futures = { version = "0.3.9", features = ["compat"] }

jsonrpc-core = '15.0.0'
jsonrpc-pubsub = "15.0.0"
structopt = { version = '0.3.8', optional = true }
serde_json = "1.0"

pallet-contracts = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0" , default-features = false }
pallet-contracts-rpc = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0"  }
pallet-transaction-payment-rpc = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0" }
sc-authority-discovery = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0"  }
sc-basic-authorship = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0"  }
sc-cli = { features = ["wasmtime"], optional = true, git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0" }
sc-client-api = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0" }
sc-chain-spec = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0" }
sc-consensus = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0" }
sc-consensus-babe = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0" }
sc-consensus-babe-rpc = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0" }
sc-consensus-epochs = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0" }
sc-consensus-slots = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0" }
sc-consensus-manual-seal = { git = "https://github.com/Axia-Tech/substrate-v2",  tag = "v3.0.0" }
sp-timestamp = { git = "https://github.com/Axia-Tech/substrate-v2",  tag = "v3.0.0" }
sc-finality-grandpa-rpc = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0" }
sc-finality-grandpa = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0" }
sc-executor = {features = ['wasmtime'], git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0" }
sc-keystore = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0"  }
sc-network = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0"  }
sc-rpc = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0"  }
sc-rpc-api = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0"  }
sc-sync-state-rpc = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0"  }
sc-service = { features = ["wasmtime"], git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0" }
sc-transaction-pool = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0" }
sp-api = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0" }
sp-authority-discovery = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0"  }
sp-block-builder = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0"  }
sp-blockchain = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0"  }
sp-consensus = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0"  }
sp-consensus-babe = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0"  }
sp-core = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0"  }
sp-finality-grandpa = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0"  }
sp-inherents = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0"  }
sp-keystore = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0"  }
sp-runtime = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0"  }
sp-transaction-pool = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0"  }
sc-finality-grandpa-warp-sync = { git = "https://github.com/Axia-Tech/substrate-v2.git", tag = "v3.0.0", optional = true }
substrate-frame-rpc-system = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0"   }
hex-literal = { version = '0.3.1' }
sc-telemetry = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0"  }
pallet-evm = { git = "https://github.com/Axia-Tech/frontier-v2.git", tag = "v2.0.1-axia"  }
pallet-ethereum = { git = "https://github.com/Axia-Tech/frontier-v2.git", tag = "v2.0.1-axia" }
fc-rpc = { git = "https://github.com/Axia-Tech/frontier-v2.git", tag = "v2.0.1-axia", features = ["rpc_binary_search_estimate"] }
fp-rpc = { git = "https://github.com/Axia-Tech/frontier-v2.git", tag = "v2.0.1-axia" }
fc-consensus = { git = "https://github.com/Axia-Tech/frontier-v2.git", tag = "v2.0.1-axia" }
fp-consensus = { git = "https://github.com/Axia-Tech/frontier-v2.git", tag = "v2.0.1-axia" }
fc-db = { git = "https://github.com/Axia-Tech/frontier-v2.git", tag = "v2.0.1-axia" }
fc-rpc-core = { git = "https://github.com/Axia-Tech/frontier-v2.git", tag = "v2.0.1-axia" }
fc-mapping-sync = { git = "https://github.com/Axia-Tech/frontier-v2.git", tag = "v2.0.1-axia" }
primitive-types = { version = "0.9", default-features = false, features = ["rlp", "byteorder"] }


[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/Axia-Tech/substrate-v2", tag = "v3.0.0" }

[features]
default = [ "cli" ]

cli = [
    "wasmi-errno",
    "sc-cli",
    "sc-finality-grandpa-warp-sync",
    "sc-service/db",
    "structopt",
]

wasmtime = [
    "sc-executor/wasmtime",
]

wasmi-errno = [
    "sc-executor/wasmi-errno",
]
