[package]
name = "axia-primitives"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.130", optional = true, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["bit-vec", "derive"] }
axia-scale-codec = { version = "2.3.1", default-features = false, features = ["bit-vec", "derive"] }
primitives = { package = "sp-core", git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
inherents = { package = "sp-inherents", git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
application-crypto = { package = "sp-application-crypto", git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-consensus-slots = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-keystore = { git = "https://github.com/axia-tech/axia-core", optional = true , branch = "dev" }
sp-api = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-version = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-std = { package = "sp-std", git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-staking = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-arithmetic = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-authority-discovery = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
axia-allychain = { path = "../allychain", default-features = false }
axia-core-primitives = { path = "../core-primitives", default-features = false }
trie = { package = "sp-trie", git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
frame-system = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
hex-literal = "0.3.3"
axia-util-mem = { version = "0.10.0", default-features = false, optional = true }


[features]
default = ["std"]
std = [
	"application-crypto/std",
	"axia-scale-codec/std",
	"scale-info/std",
	"primitives/std",
	"inherents/std",
	"trie/std",
	"sp-api/std",
	"sp-authority-discovery/std",
	"sp-consensus-slots/std",
	"sp-keystore",
	"sp-std/std",
	"sp-io/std",
	"sp-version/std",
	"sp-staking/std",
	"sp-arithmetic/std",
	"runtime_primitives/std",
	"serde",
	"axia-util-mem",
	"axia-allychain/std",
	"axia-core-primitives/std",
	"bitvec/std",
	"frame-system/std",
]
