[package]
name = "axia-rpc"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"

[dependencies]
jsonrpc-core = "18.0.0"
axia-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-blockchain = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-keystore = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-consensus = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-consensus-babe = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-chain-spec = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-rpc = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-consensus-babe = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-consensus-babe-rpc = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-consensus-epochs = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-finality-grandpa = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-finality-grandpa-rpc = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-sync-state-rpc = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/axia-tech/axia-core", branch = "dev" }
frame-rpc-system = { package = "axlib-frame-rpc-system", git = "https://github.com/axia-tech/axia-core", branch = "dev" }
pallet-mmr-rpc = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
pallet-transaction-payment-rpc = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-block-builder = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
beefy-gadget = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
beefy-gadget-rpc = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
