[package]
name = "axia-statement-table"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"

[dependencies]
axia-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
primitives = { package = "axia-primitives", path = "../primitives" }
