[package]
name = "test-allychains"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
description = "Integration tests using the test-allychains"
edition = "2018"

[dependencies]
tiny-keccak = "2.0.2"
axc-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }

adder = { package = "test-allychain-adder", path = "adder" }
halt = { package = "test-allychain-halt", path = "halt" }

[dev-dependencies]
sp-core = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

[features]
default = ["std"]
std = ["adder/std", "halt/std"]
