[package]
name = "axia-node-jaeger"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
description = "AXIA Jaeger primitives"

[dependencies]
async-std = "1.8.0"
mick-jaeger = "0.1.4"
lazy_static = "1.4"
parking_lot = "0.11.1"
axia-primitives = { path = "../../primitives" }
axia-node-primitives = { path = "../primitives" }
sc-network = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
thiserror = "1.0.30"
log = "0.4.13"
axia-scale-codec = { version = "2.3.1", default-features = false }
