[lib]
name = "malus"
path = "src/lib.rs"

[[bin]]
name = "malus-variant-a"
path = "src/variant-a.rs"

[package]
name = "axia-test-malus"
description = "Misbehaving nodes for local testnets, system and Simnet tests."
license = "GPL-3.0-only"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
readme = "README.md"
publish = false

[dependencies]
axia-cli = { path = "../../cli", default-features = false, features = [ "cli", "malus" ]  }
axia-node-subsystem = { path = "../subsystem" }
axia-node-subsystem-util = { path = "../subsystem-util" }
axia-node-core-candidate-validation = { path = "../core/candidate-validation" }
axia-node-core-pvf = { path = "../core/pvf" }
axc-util-mem = { version = "0.10.0", default-features = false, features = ["jemalloc-global"] }
color-eyre = { version = "0.5.11", default-features = false }
assert_matches = "1.5"
structopt = "0.3.23"
async-trait = "0.1.51"

[dev-dependencies]
axia-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
sp-core = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
futures = { version = "0.3.17", features = ["thread-pool"] }
