[package]
name = "axia-node-metrics"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
description = "Subsystem traits and message definitions"

[dependencies]
futures = "0.3.17"
futures-timer = "3.0.2"

metered-channel = { path = "../metered-channel" }

axlib-prometheus-endpoint = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

[features]
default = []
