[package]
name = "axia-service"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"

[dependencies]
# Axlib Client
sc-authority-discovery = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
babe = { package = "sc-consensus-babe", git = "https://github.com/axia-tech/axia-core", branch = "dev" }
beefy-primitives = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
beefy-gadget = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-block-builder = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-chain-spec = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-client-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-client-db = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-consensus-uncles = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-consensus = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-consensus-slots = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-executor = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-network = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-transaction-pool = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-sync-state-rpc = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-keystore = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-basic-authorship = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
service = { package = "sc-service", git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
telemetry = { package = "sc-telemetry", git = "https://github.com/axia-tech/axia-core", branch = "dev" }

# Axlib Primitives
sp-authority-discovery = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
consensus_common = { package = "sp-consensus", git = "https://github.com/axia-tech/axia-core", branch = "dev" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/axia-tech/axia-core", branch = "dev" }
inherents = { package = "sp-inherents", git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-block-builder = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-blockchain = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-keystore = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-session = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-storage = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-transaction-pool = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-trie = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-timestamp = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-consensus-babe = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-state-machine = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

# Axlib Pallets
pallet-babe = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
pallet-im-online = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
pallet-staking = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
pallet-mmr-primitives = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

# Axlib Other
frame-system-rpc-runtime-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
prometheus-endpoint = { package = "axlib-prometheus-endpoint", git = "https://github.com/axia-tech/axia-core", branch = "dev" }

# External Crates
futures = "0.3.17"
hex-literal = "0.3.3"
tracing = "0.1.29"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"
kvdb = "0.10.0"
kvdb-rocksdb = { version = "0.14.0", optional = true }
async-trait = "0.1.51"
lru = "0.7"

# AXIA
axia-node-core-allychains-inherent = { path = "../core/allychains-inherent" }
axia-overseer = { path = "../overseer" }
axia-client = { path = "../client", default-features = false, optional = true }
axia-allychain = { path = "../../allychain" }
axia-primitives = { path = "../../primitives" }
axia-node-primitives = { path = "../primitives" }
axia-rpc = { path = "../../rpc" }
axia-subsystem = { package = "axia-node-subsystem", path = "../subsystem" }
axia-node-subsystem-util = { path = "../subsystem-util" }
axia-runtime-allychains = { path = "../../runtime/allychains" }
axia-node-network-protocol = { path = "../network/protocol" }

# AXIA Runtimes
axia-runtime = { path = "../../runtime/axia", optional = true }
axiatest-runtime = { path = "../../runtime/axiatest", optional = true }
alphanet-runtime = { path = "../../runtime/alphanet", optional = true }
betanet-runtime = { path = "../../runtime/betanet", optional = true }

# AXIA Subsystems
axia-approval-distribution = { path = "../network/approval-distribution", optional = true }
axia-availability-bitfield-distribution = { path = "../network/bitfield-distribution", optional = true }
axia-availability-distribution = { path = "../network/availability-distribution", optional = true }
axia-availability-recovery = { path = "../network/availability-recovery", optional = true }
axia-collator-protocol = { path = "../network/collator-protocol", optional = true }
axia-dispute-distribution = { path = "../network/dispute-distribution", optional = true }
axia-gossip-support = { path = "../network/gossip-support", optional = true }
axia-network-bridge = { path = "../network/bridge", optional = true }
axia-node-collation-generation = { path = "../collation-generation", optional = true }
axia-node-core-approval-voting = { path = "../core/approval-voting", optional = true }
axia-node-core-av-store = { path = "../core/av-store", optional = true }
axia-node-core-backing = { path = "../core/backing", optional = true }
axia-node-core-bitfield-signing = { path = "../core/bitfield-signing", optional = true }
axia-node-core-candidate-validation = { path = "../core/candidate-validation", optional = true }
axia-node-core-chain-api = { path = "../core/chain-api", optional = true }
axia-node-core-chain-selection = { path = "../core/chain-selection", optional = true }
axia-node-core-dispute-coordinator = { path = "../core/dispute-coordinator", optional = true }
axia-node-core-dispute-participation = { path = "../core/dispute-participation", optional = true }
axia-node-core-provisioner = { path = "../core/provisioner", optional = true }
axia-node-core-runtime-api = { path = "../core/runtime-api", optional = true }
axia-statement-distribution = { path = "../network/statement-distribution", optional = true }

[dev-dependencies]
axia-test-client = { path = "../test/client" }
axia-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
env_logger = "0.9.0"
log = "0.4.14"
assert_matches = "1.5.0"

[features]
default = ["db", "full-node", "axia-native"]

db = [
	"service/db"
]

full-node = [
	"axia-node-core-av-store",
	"axia-node-core-approval-voting",
	"axia-availability-bitfield-distribution",
	"axia-availability-distribution",
	"axia-availability-recovery",
	"axia-client",
	"axia-collator-protocol",
	"axia-dispute-distribution",
	"axia-gossip-support",
	"axia-network-bridge",
	"axia-node-collation-generation",
	"axia-node-core-backing",
	"axia-node-core-bitfield-signing",
	"axia-node-core-candidate-validation",
	"axia-node-core-chain-api",
	"axia-node-core-chain-selection",
	"axia-node-core-dispute-coordinator",
	"axia-node-core-dispute-participation",
	"axia-node-core-provisioner",
	"axia-node-core-runtime-api",
	"axia-statement-distribution",
	"axia-approval-distribution",
	"kvdb-rocksdb"
]

light-node = []

# Configure the native runtimes to use. AXIA is enabled by default.
#
# Validators require the native runtime currently
axia-native = [ "axia-runtime", "axia-client/axia" ]
axiatest-native = [ "axiatest-runtime", "axia-client/axiatest" ]
alphanet-native = [ "alphanet-runtime", "axia-client/alphanet" ]
betanet-native = [ "betanet-runtime", "axia-client/betanet" ]

runtime-benchmarks = [
	"axia-runtime/runtime-benchmarks",
	"axiatest-runtime/runtime-benchmarks",
	"alphanet-runtime/runtime-benchmarks",
	"betanet-runtime/runtime-benchmarks"
]
try-runtime = [
	"axia-runtime/try-runtime",
	"axiatest-runtime/try-runtime",
	"alphanet-runtime/try-runtime",
	"betanet-runtime/try-runtime",
]
malus = ["full-node"]
disputes = ["axia-node-core-dispute-coordinator/disputes"]
