[package]
name = "axia-node-subsystem-test-helpers"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
description = "Subsystem traits and message definitions"

[dependencies]
async-trait = "0.1.51"
futures = "0.3.17"
parking_lot = "0.11.1"
axia-node-subsystem = { path = "../subsystem" }
axia-node-subsystem-util = { path = "../subsystem-util" }
axia-primitives = { path = "../../primitives" }
sp-core = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-keystore = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-keystore = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-keyring = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-application-crypto = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

[dev-dependencies]
axia-overseer = { path = "../overseer" }
