[package]
name = "axia-primitives-test-helpers"
version = "0.9.17"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2021"

[dependencies]
sp-keyring = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sp-application-crypto = { package = "sp-application-crypto", git = "https://github.com/axia-tech/axlib", default-features = false , branch = "axlib" }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
axia-primitives = { path = "../" }
