[package]
name = "axia-rpc-runtime-api"
authors = ['Axia Network <https://github.com/Axia-Tech>']
edition = "2018"
license = 'GPL-3.0'
homepage = 'https://axia.finance'
repository = 'https://github.com/AxiaCoin/Axia-Network-axia/tree/master'
version = '0.9.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
primitives = { default-features = false, package = 'axia-primitives', path = '../../primitives', version = '0.9.0'}
sp-api = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0" , default-features = false }
sp-std = { git = "https://github.com/Axia-Tech/substrate-v2.git",  tag = "v3.0.0" , default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }


[features]
default = ["std"]
std = [
	"sp-api/std",
	"codec/std",
]
